--- a/FlowerBackApp2/FlowerBackApp2.UWP/FlowerBackApp2.UWP.csproj
+++ b/FlowerBackApp2/FlowerBackApp2.UWP/FlowerBackApp2.UWP.csproj
@@ -108,6 +108,7 @@
     <None Include="FlowerBackApp2.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
