--- a/FlowerBackApp2/FlowerBackApp2.UWP/FlowerBackApp2.UWP.csproj
+++ b/FlowerBackApp2/FlowerBackApp2.UWP/FlowerBackApp2.UWP.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.png" />
+    <Content Include="ic_action_add_circle.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
