--- a/FlowerBackApp2/FlowerBackApp2/FlowerBackApp2.csproj
+++ b/FlowerBackApp2/FlowerBackApp2/FlowerBackApp2.csproj
@@ -46,8 +46,12 @@
     <Compile Include="Pages\FlowersPage.xaml.cs">
       <DependentUpon>FlowersPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\NewFlowerPage.xaml.cs">
+      <DependentUpon>NewFlowerPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiService.cs" />
+    <Compile Include="Services\NavigationService.cs" />
     <Compile Include="ViewModels\FlowerItemViewModel.cs" />
     <Compile Include="ViewModels\IObservableCollection.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -97,9 +101,14 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Pages\FlowersPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\NewFlowerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
