--- a/FlowerBackApp2/FlowerBackApp2/FlowerBackApp2.csproj
+++ b/FlowerBackApp2/FlowerBackApp2/FlowerBackApp2.csproj
@@ -38,6 +38,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Clases\Response.cs" />
     <Compile Include="Infrastructure\InstanceLocator.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -52,9 +53,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiService.cs" />
     <Compile Include="Services\NavigationService.cs" />
+    <Compile Include="ViewModels\DialogService.cs" />
     <Compile Include="ViewModels\FlowerItemViewModel.cs" />
     <Compile Include="ViewModels\IObservableCollection.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\NewFlowerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
